src/sf/src/main/default/objects/RecurringTransaction__c/RecurringTransaction__c.object-meta.xml
<CustomObject>
    <label>Recurring Transaction</label>
    <nameField>
        <displayFormat>RTR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>