src/sf/src/main/default/objects/RecurringTransaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Recurring Transactions</relationshipLabel>
    <relationshipName>RecurringTransactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>