src/sf/src/main/default/objects/RecurringTransaction__c/fields/NextTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>NextTransactionDate__c</fullName>
    <label>Next Transaction Date</label>
    <type>Date</type>
</CustomField>