src/sf/src/main/default/objects/RecurringTransaction__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <label>Wallet</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>Recurring Transactions</relationshipLabel>
    <relationshipName>RecurringTransactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>