src/sf/src/main/default/objects/RecurringTransaction__c/recordTypes/RecurringTransaction.recordType-meta.xml
<RecordType>
    <fullName>RecurringTransaction</fullName>
    <active>true</active>
    <label>Recurring Transaction</label>
</RecordType>