src/sf/src/main/default/objects/RecurringTransaction__c/validationRules/Next_Transaction_Date_Tomorrow_Or_Later.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Transaction_Date_Tomorrow_Or_Later</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;RecurringTransaction&quot;
&amp;&amp; NextTransactionDate__c &lt;= TODAY()</errorConditionFormula>
    <errorDisplayField>NextTransactionDate__c</errorDisplayField>
    <errorMessage>The next transaction date must be set for tomorrow or later</errorMessage>
</ValidationRule>