src/sf/src/main/default/objects/RecurringTransaction__c/listViews/AllRecurringTransactions.listView-meta.xml
<ListView>
    <fullName>AllRecurringTransactions</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Amount__c</columns>
    <columns>NextTransactionDate__c</columns>
    <columns>Interval__c</columns>
    <columns>Category__c</columns>
    <columns>Wallet__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Recurring Transactions</label>
</ListView>